--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
 * {
-    background-color: whitesmoke;
+    background-color: #16c0a7;
+    /* color: #162fc0; */
+    color: #27503d;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .header {
@@ -13,34 +16,39 @@
     margin: 0 auto;
     box-sizing: border-box;
     display: grid;
-    grid-template-columns: repeat(3, minmax(0, 1fr));
-    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
     row-gap: 1rem;
     column-gap: 1rem;
 }
 
 .square {
     font-family:Arial, Helvetica, sans-serif;
-    border: 2px solid forestgreen;
+    color: navy;
+    border: 2px solid #1684c0;
     border-radius: 5%;
     background-color: lightgray;
-    box-shadow: 2px 2px 2px 2px;
+    box-shadow: 2px 2px 2px 2px #1684c0;
     font-size: 5rem;
     text-align: center;
-    padding-top: 22px;
-}
-
-.square:hover {
-    border: 2px solid orange;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* padding-top: 22px; */
 }
 
 #winner-div {
     margin: 33px auto;
-    width: 400px;
+    width: 300px;
+    height: 222px;
     text-align: center;
-    color: firebrick;
+    color: #a716c0;
     font-size: 4rem;
+    font-weight: 700;
     font-family: Arial, Helvetica, sans-serif;
+    border-radius: 22px;
+    text-align: center;
+
 }
 
 .reset-div {
@@ -52,7 +60,7 @@
     margin: 0 auto;
     width: 100px;
     height: 44px;
-    background-color: red;
+    background-color: #a716c0;
     color: whitesmoke;
     font-weight: 900;
     border-radius: 10%;
@@ -61,8 +69,22 @@
 #reset-button:hover {
     height: 55px;
     width: 111px;
+    transform: scale(1.001);
 }
 
+.square:hover {
+    transform: scale(1.1);
+}
+
+.selected-x {
+    border: 4px solid #c0162f;
+}
+
+.selected-0 {
+    border: 4px solid #84c016;
+}
+
+
 #reset-button:active {
-    background-color: yellow;
+    background-color: darkgray;
 }
